<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.markeloff.practise.MainActivity">

    <TextView
        android:id="@+id/tv_main_headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_greeting" />

    <Button
        android:id="@+id/btn_storage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/tv_main_headline"
        android:layout_marginTop="20dp"
        android:text="@string/storage_demo" />

    <Button
        android:id="@+id/btn_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/tv_main_headline"
        android:layout_alignRight="@+id/tv_main_headline"
        android:layout_alignTop="@+id/btn_storage"
        android:text="@string/fragment_demo" />

    <Button
        android:id="@+id/btn_ipc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/btn_fragment"
        android:layout_marginTop="20dp"
        android:text="@string/ipc_demo" />

    <Button
        android:id="@+id/btn_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_fragment"
        android:layout_alignStart="@+id/btn_fragment"
        android:layout_alignTop="@+id/btn_ipc"
        android:text="@string/service_demo" />

    <Button
        android:id="@+id/btn_rx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/btn_service"
        android:layout_marginTop="20dp"
        android:text="@string/rx_demo" />

    <Button
        android:id="@+id/btn_retrofit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_service"
        android:layout_alignStart="@+id/btn_service"
        android:layout_alignTop="@+id/btn_rx"
        android:text="@string/retrofit_demo" />

    <Button
        android:id="@+id/btn_send_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/btn_rx"
        android:layout_marginTop="20dp"
        android:text="@string/actionbar_share_demo" />
</RelativeLayout>
