<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ipc.IpcDemoActivity">

    <TextView
        android:id="@+id/tv_icp_headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ipc_greetings" />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/tv_icp_headline"
        android:layout_marginTop="20dp"
        android:text="@string/start_activity_to_add" />

    <Button
        android:id="@+id/btn_sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/btn_add"
        android:layout_marginTop="20dp"
        android:text="@string/start_activity_to_sub" />

    <Button
        android:id="@+id/btn_serial_demo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/btn_sub"
        android:layout_marginTop="20dp"
        android:text="@string/serializable_demo" />

    <Button
        android:id="@+id/btn_parcel_demo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/btn_serial_demo"
        android:layout_marginTop="20dp"
        android:text="@string/parcelable_demo" />

</RelativeLayout>
